# legacy-sapi-clients

./: LICENSE  licenses.txt  readme.rst  relman.yaml
c-client/: .gitignore  CMakeLists.txt  README.md  README.txt.in  exported-symbols-osx.map  version.map
c-client/examples/: make_anneal_schedule.c  make_anneal_schedule.h  sapi_connectingToSolver.c  sapi_embedding_example.c  sapi_fixVariables_example.c  sapi_reduceDegreeMakeQuadratic_example.c  sapi_solveQSage_example.c
c-client/include/: conversions.h  dwave_sapi.h  internal.hpp  local.hpp  remote.hpp  sapi-impl.hpp
c-client/licenses/: eula.txt.in
c-client/src/: conversions.cpp  defaults.cpp  dwave_sapi.cpp  embed-problem.cpp  fix-variables.cpp  freefuncs.cpp  global.cpp  internal.cpp  local.cpp  remote.cpp  sapi-impl.cpp  unembed-answer.cpp  version.c.in
c-client/test/: CMakeLists.txt  main.cpp  test-embed-problem.cpp  test-errors.cpp  test-fixvars.cpp  test-global.cpp  test-local.cpp  test-qsage.cpp  test-remote-props.cpp  test-remote.cpp  test-solvers.cpp  test-unembed-answer.cpp  test.cpp  test.hpp  test_dwave_sapi.cpp
find-embedding/matlab/: CMakeLists.txt  find_embedding_matlab_wrapper.cpp  find_embedding_mex.m
find-embedding/matlab/test/: CMakeLists.txt  runFindEmbeddingMexTests.m.in  testFindEmbeddingMex.m
find-embedding/python/: CMakeLists.txt  build_egg.py.in  find_embedding_impl.i  find_embedding_python_wrapper.cpp  find_embedding_python_wrapper.hpp
find-embedding/python/test/: CMakeLists.txt  test_find_embedding_impl.py
find-embedding/test/: CMakeLists.txt  test-find-embedding.cpp  test.hpp  validation.cpp
fix-variables/: CMakeLists.txt  README.md
fix-variables/include/: fix_variables.hpp
fix-variables/matlab/: CMakeLists.txt  fix_variables_matlab_wrapper.cpp  fix_variables_mex.m
fix-variables/matlab/test/: CMakeLists.txt  testFixVariablesMex.m
fix-variables/python/: CMakeLists.txt  build_egg.py.in  fix_variables_impl.i  fix_variables_python_wrapper.cpp  fix_variables_python_wrapper.hpp
fix-variables/python/test/: CMakeLists.txt  test_fix_variables_impl.py
fix-variables/src/: fix_variables.cpp
fix-variables/test/: CMakeLists.txt  test-fix-variables.cpp
local-solvers/: .gitignore  CMakeLists.txt  README.md
local-solvers/include/sapi-local/: exceptions.hpp  orang-heuristic.hpp  orang-solvers.hpp  problems.hpp  sapi-local.hpp
local-solvers/lib/matlab/: CMakeLists.txt  conversions.cpp  conversions.hpp  errid.cpp  errid.hpp  orang-heuristic-matlab-wrapper.cpp  orang-optimize.cpp  orang-sample.cpp  (+3 more)
local-solvers/src/: orang-heuristic.cpp  orang-solvers.cpp  problems.cpp
local-solvers/test/: CMakeLists.txt  test-orang-heuristic.cpp  test-orang-optimize.cpp  test-orang-sample.cpp
matlab-client/: CMakeLists.txt  README.md  README.txt.in  checkSolverParams.m  chimeraToLinearIndex.m  getChimeraAdjacency.m  getHardwareAdjacency.m  isingToQubo.m  linearToChimeraIndex.m  makeQuadratic.m  quboToIsing.m  reduceDegree.m  sapiAsyncDone.m  sapiAsyncResult.m  sapiAsyncRetry.m  sapiAsyncSolveIsing.m  sapiAsyncSolveQubo.m  sapiAsyncStatus.m  sapiAwaitCompletion.m  sapiAwaitSubmission.m  sapiCancelSubmittedProblem.m  sapiEmbedProblem.m  sapiFindEmbedding.m  sapiFixVariables.m  sapiListSolvers.m  sapiLocalConnection.m  sapiRemoteConnection.m  sapiSolveIsing.m  sapiSolveQSage.m  sapiSolveQubo.m  sapiSolver.m  sapiSolverProperties.m  sapiUnembedAnswer.m  sapiVersion.m.in  sapi_solveParams.m
matlab-client/examples/: connectingToSolverExample.m  embeddingExample.m  fixVariablesExample.m  makeAnnealSchedule.m  reduceOrderInteractionExample.m  solveQSageExample.m
matlab-client/test/: CMakeLists.txt  runMATLABClientTests.m.in  sapilocal_orangHeuristic.m  sapilocal_orangOptimize.m  sapilocal_orangSample.m  sapiremote_retry.m  sapiremote_status.m  testAdjacency.m  testDegreeReduction.m  testEmbedProblem.m  testIndexConversion.m  testIsingQuboConversion.m  testLocal.m  testParameterValidation.m  testSubmittedProblem.m  testUnembedAnswer.m
python-client/: .gitignore  CMakeLists.txt  README.md  README.txt.in  install.py.in  setup.py  test-requirements.txt
python-client/dwave_sapi2/: __init__.py  core.py  embedding.py  fix_variables.py  local.py  qsage.py  remote.py  util.py
python-client/examples/: connecting_to_solver_example.py  embedding_example.py  fix_variables_example.py  make_anneal_schedule.py  reduce_order_interaction_example.py  solve_qsage_example.py
python-client/licenses/: eula.txt
python-client/test/: find_embedding_impl.py  sapilocal.py  sapiremote.py  test_await_completion.py  test_chimera_to_linear_index.py  test_embed_problem.py  test_get_chimera_adjacency.py  test_get_hardware_adjacency.py  test_ising_to_qubo.py  test_linear_index_to_chimera.py  test_local_solvers.py  test_make_quadratic.py  test_param_validation.py  test_qubo_to_ising.py  test_reduce_degree.py  test_solve.py  test_solve_ising_qubo.py  test_submitted_problem.py  test_unembed_answer.py  util.py
qsage/: README.md  (+1 more)
qsage/matlab/: CMakeLists.txt  blackbox_matlab_wrapper.cpp  solve_qsage_mex.m
qsage/python/: CMakeLists.txt  blackbox_python_wrapper.cpp  blackbox_python_wrapper.hpp  build_egg.py.in  qsage_impl.i
qsage/test/: CMakeLists.txt  test-qsage.cpp
remote/: .gitignore  CMakeLists.txt  README.md
remote/include/: answer-service.hpp  base64.hpp  coding.hpp  exceptions.hpp  http-service.hpp  json.hpp  problem-manager.hpp  problem.hpp  retry-service.hpp  sapi-service.hpp  solver.hpp  threadpool.hpp  types.hpp
remote/src/: answer-service.cpp  await.cpp  base64.cpp  decode-answer.cpp  decode-qp.cpp  encode-qp.cpp  enum-strings.cpp  http-service.cpp  json.cpp  problem-manager.cpp  retry-service.cpp  sapi-service.cpp  threadpool.cpp  user-agent.cpp.in  user-agent.hpp
remote/test/: CMakeLists.txt  json-builder.hpp  test-answer-format.cpp  test-await.cpp  test-base64.cpp  test-decode-qp-answer.cpp  test-encode-qp-problem.cpp  test-enum-strings.cpp  test-json.cpp  test-problem-manager-retry.cpp  test-problem-manager.cpp  test-retry-service.cpp  test-sapi-service.cpp  test-threadpool.cpp  test.cpp  test.hpp
(+126 files in other folders)
